fix(WidgetsManager): 限制组件边界